<resources>
    <string name="app_name">Aula08</string>
    <string name="title">Últimas notícias do dia</string>
    <string name="data">28/10/2021</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae erat at massa porta efficitur ac vitae ante. Integer libero lorem, ornare eu facilisis vel, congue sit amet turpis. Vestibulum sollicitudin velit nisi efficitur ac vitae ante. Integer libero lorem, ornare eu facilisis vel, congue sit amet turpis. Vestibulum sollicitudin velit nisi, nec semper dolor eleifend non. Cras rhoncus lorem in libero scelerisque, vitae ullamcorper arcu pulvinar. Phasellus eu pulvinar justo. Maecenas sit amet risus nibh. In semper diam quam, vitae bibendum ligula varius ac. Vestibulum sagittis nisl id elit iaculis, ut eleifend tellus egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc in lacus vehicula sem euismod maximus. Sed ut felis vel quam molestie consectetur. Pellentesque rutrum in purus et convallis molestie consectetur. Pellentesque rutrum in purus et convallis.</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="author">Autor</string>
</resources>